# PyDLNM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/dlnm/: __init__.py  basis.py  crossbasis.py  crosspred.py  crossreduce.py  datasets.py  knots.py  penalty.py  plotting.py  utils.py
src/dlnm/data/: chicagoNMMAPS.csv
src/pydlnm/: __init__.py  basis.py  crossbasis.py  crosspred.py  crossreduce.py  datasets.py  knots.py  penalty.py  plotting.py  utils.py
src/pydlnm/data/: drug.csv  nested.csv
tests/: conftest.py  r_compat_helpers.py  test_basis.py  test_crossbasis.py  test_crosspred.py  test_crossreduce.py  test_datasets.py  test_integration.py  test_knots.py  test_penalty.py  test_plotting.py  test_r_compat_basis.py  test_r_compat_crossbasis.py  test_r_compat_crosspred.py  test_r_compat_crossreduce.py  test_r_compat_knots.py  test_utils.py
tests/fixtures/: README.md  coef_12.csv  crossbasis_bs_df4_ns_df3_lag10.csv  crossbasis_lin_ns_df3_lag10.csv  crossbasis_ns_df4_ns_df3_lag0_21.csv  crossbasis_ns_df4_ns_df3_lag10.csv  crossbasis_ns_df4_strata_df2_lag10.csv  crosspred_allfit.csv  crosspred_allhigh.csv  crosspred_alllow.csv  crosspred_allse.csv  crosspred_matfit.csv  crosspred_mathigh.csv  crosspred_matlow.csv  crosspred_matse.csv  crosspred_predvar.csv  crossreduce_lag_fit.csv  crossreduce_lag_high.csv  crossreduce_lag_low.csv  crossreduce_lag_se.csv  crossreduce_overall_fit.csv  crossreduce_overall_high.csv  crossreduce_overall_low.csv  crossreduce_overall_se.csv  crossreduce_var_fit.csv  crossreduce_var_high.csv  crossreduce_var_low.csv  crossreduce_var_se.csv  equalknots_lag30_nk3.csv  equalknots_lag30_nk4.csv  generate_fixtures.R  logknots_lag10_nk3.csv  logknots_lag21_nk4.csv  onebasis_bs_df5.csv  onebasis_integer_lagseq.csv  onebasis_lin.csv  onebasis_ns_df4.csv  onebasis_ns_df4_intercept.csv  onebasis_ns_knots.csv  onebasis_poly_deg2.csv  (+5 more)
