[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydlnm"
version = "0.1.0"
description = "Distributed Lag Non-Linear Models for Python"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Victor Nacher" },
]
keywords = [
    "distributed lag",
    "non-linear models",
    "dlnm",
    "epidemiology",
    "time series",
    "environmental health",
    "exposure-response",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "patsy>=0.5",
    "statsmodels>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Victorivus/PyDLNM"
Documentation = "https://github.com/Victorivus/PyDLNM#readme"
Repository = "https://github.com/Victorivus/PyDLNM"
Issues = "https://github.com/Victorivus/PyDLNM/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pydlnm = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    # Naming conventions intentionally match R's dlnm API:
    # Boundary_knots, S, D, Q, X, Y, M, B, A — mathematical / R-compatible names
    "N802",  # Function name should be lowercase (load_chicagoNMMAPS, _mkXpred)
    "N803",  # Argument name should be lowercase (Boundary_knots, S, X, B, A)
    "N806",  # Variable in function should be lowercase (Q, D, X, Y, M, Xpred, …)
    "N815",  # Variable in class scope should not be mixedCase (allRRfit, matRRfit, …)
    "E741",  # Ambiguous variable name (l used as lag index, matches R conventions)
    "SIM108",  # Use ternary operator — explicit if/else is clearer for multi-step init
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
implicit_optional = true
ignore_missing_imports = true
